--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: default
-title: "Welcome to Jekyll"
-description: "Jekyll Theme Mr.Brown"
+title: "Welcome to Java Creed Blog"
+description: "A passionate Java programmer"
 ---
